force-app/main/default/objects/Quality_Check_Report__c/Quality_Check_Report__c.object-meta.xml
<CustomObject>
    <!--actionOverrides>
        <actionName>View</actionName>
        <comment>Action override created by Lightning App Builder during activation.</comment>
        <content>Quality_Check_Report_Record_Page</content>
        <formFactor>Small</formFactor>
        <skipRecordTypeSelect>false</skipRecordTypeSelect>
        <type>Flexipage</type>
    </actionOverrides>
    <label>Quality Check Report</label>
    <nameField>
        <displayFormat>QCR-{MMYYYY}-{000000}</displayFormat>
        <label>Quality Check Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Check Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>