force-app/main/default/objects/Quality_Check_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quality Check Reports</relationshipLabel>
    <relationshipName>Quality_Check_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>