force-app/main/default/objects/Quality_Check_Report__c/fields/Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Completion_Rate__c</fullName>
    <formula>IF(
   Sum_Quality_Checks__c &gt; 0,
   Completed_Quality_Checks__c /  Sum_Quality_Checks__c ,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>