force-app/main/default/objects/Quality_Check_Report__c/fields/Internal_Contact_User__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Check_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>