force-app/main/default/objects/Quality_Check_Report__c/fields/Open_Quality_Checks__c.field-meta.xml
<CustomField>
    <fullName>Open_Quality_Checks__c</fullName>
    <label>Open Quality Checks</label>
    <summaryFilterItems>
        <field>Quality_Check__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Quality_Check__c.Quality_Check_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>