force-app/main/default/objects/Quality_Check_Report__c/fields/Report_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Report_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quality Check Reports</relationshipLabel>
    <relationshipName>Quality_Check_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>