force-app/main/default/objects/Quality_Check_Report__c/fields/Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Send_Status__c</fullName>
    <label>Send Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>