force-app/main/default/objects/Quality_Check_Report__c/fields/Send_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Send_Summary_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Summary Report</label>
    <type>Checkbox</type>
</CustomField>