force-app/main/default/objects/Quality_Check_Report__c/fields/Sum_Quality_Checks__c.field-meta.xml
<CustomField>
    <fullName>Sum_Quality_Checks__c</fullName>
    <label>Sum Quality Checks</label>
    <summaryForeignKey>Quality_Check__c.Quality_Check_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>